app/resources/css/components/share-picture.css
.share-picture {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: 600px;
    height: 315px;

    /* Center vertically and horizontally */
    margin: auto;

    border-top: 4px solid var(--blue-darker);
    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25), 0 0 10px rgba(0, 0, 0, 0.25);

    overflow: hidden;
}

.share-picture__content {
    padding: var(--space-sm);
}

.share-picture__subtitle {
    font-weight: 600;
}

.share-picture__title {
    display: -webkit-box;
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 3;
    overflow: hidden;

    font-family: var(--font-family-condensed);
    font-weight: 500;
}

.share-picture__footer {
    display: flex;
    align-items: center;
    padding: var(--space-xs) var(--space-sm);
    font-size: var(--text-sm);
    background-color: var(--gray-lightest);
}

.share-picture__footer-text {
    flex-grow: 1;
    flex-shrink: 1;
}

